--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -37,6 +37,8 @@
   <span>]</span><br /><span>[</span>
   <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
   <a href="/links/">Links</a>
+  <span>]</span><br /><span>[</span>
+  <a href="http://gimp.org/news.rdf"><img src="images/rss-gimp-news.png" alt="GIMP News Feed"></a>
   <span>]</span>
 </td>
 <td id="main" width="100%">
