specify image size.
2005-09-07  Sven Neumann  <sven@gimp.org>

	* includes/wgo-page-init.xhtml: specify image size.

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -38,7 +38,7 @@
   <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
   <a href="/links/">Links</a>
   <span>]</span><br /><span>[</span>
-  <a href="http://gimp.org/news.rdf"><img src="images/rss-gimp-news.png" alt="GIMP News Feed"></a>
+  <a href="http://gimp.org/news.rdf"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0"></a>
   <span>]</span>
 </td>
 <td id="main" width="100%">
