donating/sponsors.htrw reordered sponsors and improved logos layout.
2005-10-13  Karine Delvare  <kdelvare@nerim.net>

  * donating/sponsors.htrw
  * style/wgo.css: reordered sponsors and improved logos layout.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -108,11 +108,15 @@ div.news img {
     padding: 0em 1em 0em 0em;
 }
 
-p.images img {
+p.images img, p.logos img {
   border: none;
 }
 
-p.images {
+p.logos img {
+  margin: 5px 15px;
+}
+
+p.images, p.logos {
   text-align: center;
 }
 
