--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -17,7 +17,7 @@
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="/">News</a><span> | </span>
-  <a href="/about/">About The GIMP</a><span> | </span>
+  <a href="/about/">About GIMP</a><span> | </span>
   <a href="/about/splash/" class="sub">Splash archive</a><span> | </span>
   <a href="/screenshots/">Screenshots</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
