added planets to the menu.
* includes/wgo-page-init.htrw: added planets to the menu.

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -36,9 +36,15 @@
   <a href="/macintosh/">GIMP for MacOSX</a><span> | </span>
   <span>]</span><br /><span>[</span>
   <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
-  <a href="/links/">Links</a>
   <span>]</span><br /><span>[</span>
-  <a href="http://gimp.org/news.rdf"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
+  <a href="/links/">Links</a>
+  <a href="http://paths.gimp.org" class="sub">GNU Art News</a><span> | </span>
+  <a href="http://parasites.gimp.org" class="sub">GIMP Active Bugs</a><span> | </span>
+  <a href="http://layers.gimp.org" class="sub">GIMP Developer Web Logs</a><span> | </span>
+  <a href="http://pixels.gimp.org" class="sub">GIMP User Web Logs</a><span> | </span>
+  <a href="http://undo.gimp.org" class="sub">Release News</a><span> | </span>
+  <span>]</span><br /><span>[</span>
+  <a href="http://gimp.org/~planet/www.gimp.org/news/index.rss20"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
   <span>]</span>
 </td>
 <td id="main" width="100%">
