--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -16,7 +16,7 @@
 <td id="menu" height="100%">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
-  <a href="/">News</a><span> | </span>
+  <a href="http://www.gimp.org/~planet/www.gimp.org/news/">News</a><span> | </span>
   <a href="/about/">About GIMP</a><span> | </span>
   <a href="/about/splash/" class="sub">Splash archive</a><span> | </span>
   <a href="/screenshots/">Screenshots</a><span> | </span>
