--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -39,10 +39,11 @@
   <span>]</span><br /><span>[</span>
   <a href="/links/">Links</a>
   <a href="http://paths.gimp.org" class="sub">GNU Art News</a><span> | </span>
-  <a href="http://parasites.gimp.org" class="sub">GIMP Active Bugs</a><span> | </span>
+  <a href="http://wiki.gimp.org" class="sub">GIMP Wiki</a><span> | </span>
   <a href="http://layers.gimp.org" class="sub">GIMP Developer Web Logs</a><span> | </span>
   <a href="http://pixels.gimp.org" class="sub">GIMP User Web Logs</a><span> | </span>
   <a href="http://undo.gimp.org" class="sub">Release News</a><span> | </span>
+  <a href="http://parasites.gimp.org" class="sub">GIMP Active Bugs</a><span> | </span>
   <span>]</span><br /><span>[</span>
   <a href="http://gimp.org/~planet/www.gimp.org/news/index.rss20"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
   <span>]</span>
