--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -26,9 +26,11 @@
   <a href="/books/" class="sub">Books</a><span> | </span>
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
+  <a href="http://wiki.gimp.org" class="sub">Wiki</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
   <a href="/donating/" class="sub">Donating</a><span> | </span>
-  <a href="/bugs/" class="sub">Bugs</a>
+  <a href="/bugs/" class="sub">Bugs</a><span> | </span>
+  <a href="/links/">Links</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
   <a href="/unix/">GIMP for Unix</a><span> | </span>
@@ -37,13 +39,7 @@
   <span>]</span><br /><span>[</span>
   <a href="/about/merchandise.html">GIMP Stuff</a><span> | </span>
   <span>]</span><br /><span>[</span>
-  <a href="/links/">Links</a>
-  <a href="http://paths.gimp.org" class="sub">GNU Art News</a><span> | </span>
-  <a href="http://wiki.gimp.org" class="sub">GIMP Wiki</a><span> | </span>
-  <a href="http://layers.gimp.org" class="sub">GIMP Developer Web Logs</a><span> | </span>
-  <a href="http://pixels.gimp.org" class="sub">GIMP User Web Logs</a><span> | </span>
-  <a href="http://undo.gimp.org" class="sub">Release News</a><span> | </span>
-  <a href="http://parasites.gimp.org" class="sub">GIMP Active Bugs</a><span> | </span>
+
   <span>]</span><br /><span>[</span>
   <a href="http://gimp.org/~planet/www.gimp.org/news/index.rss20"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
   <span>]</span>
