Bugs -> Bug Reports

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -28,7 +28,7 @@
   <a href="http://wiki.gimp.org" class="sub">Wiki</a><span> | </span>
   <a href="/develop/">Getting Involved</a><span> | </span>
   <a href="/donating/" class="sub">Donating</a><span> | </span>
-  <a href="/bugs/" class="sub">Bugs</a><span> | </span>
+  <a href="/bugs/" class="sub">Bug Reports</a><span> | </span>
   <a href="/links/">Links</a>
   <span>]</span><br /><span>[</span>
   <a href="/source/">GIMP from Source</a><span> | </span>
