--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -40,7 +40,7 @@
   <span>]</span><br /><span>[</span>
 
   <span>]</span><br /><span>[</span>
-  <a href="http://gimp.org/~planet/www.gimp.org/news/index.rss20"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
+  <a href="http://gimp.org/news.rdf"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
   <span>]</span>
 </td>
 <td id="main" width="100%">
