changed "The GIMP" to "GIMP".
2007-01-28  Sven Neumann  <sven@gimp.org>

	* includes/wgo-page-init.xhtml: changed "The GIMP" to "GIMP".


svn path=/trunk/; revision=1435

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,10 +1,10 @@
 <!-- $Id$ -->
 </head>
 <body id="wwwgimporg">
-<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="The GIMP">
+<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="GIMP">
 <tbody>
 <tr valign="top">
-<td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[The GIMP]" border="0" /></a></td>
+<td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[GIMP]" border="0" /></a></td>
 <td width="99%"><br /></td>
 <td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
 </tr>
