use a[href] attribute selector to avoid underlining and color changes on
2007-02-24  Michael Schumacher  <schumaml@cvs.gnome.org>

	* style/wgo.css: use a[href] attribute selector to avoid
	underlining and color changes on hover for local anchors.

svn path=/trunk/; revision=1448

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -30,7 +30,7 @@ a {
   font-weight: bold;
 }
 
-a:hover {
+a[href]:hover {
   background: transparent;
   color: #991e1e;
   text-decoration: underline;
