--- a/style/wgo.css
+++ b/style/wgo.css
@@ -51,6 +51,18 @@ img.map {
   padding: 0px;
 }
 
+img.left {
+  float: left;
+  margin-left: 40px;
+  margin-right: 20px;
+}
+
+img.right, object.right {
+  float: right;
+  margin-left: 20px;
+  margin-right: 40px;
+}
+
 /* Main header. */
 h1 {
   background: #f5f5f5;
