Creating a branch for version 2.4 release. Aiming to do a style facelift, get rid of tables for layout and a few additions.
svn path=/branches/v2.4/; revision=1458

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,16 +1,19 @@
 <!-- $Id$ -->
-</td>
-</tr></tbody></table>
+</div><!-- main -->
+</div><!-- maincontainer -->
 <div id="linkbar">
   <a href="http://registry.gimp.org">Plug-In Registry</a> |
   <a href="http://developer.gimp.org">GIMP Development</a> |
   <a href="http://gug.sunsite.dk">GIMP User Group</a>
+
+	<div>
+	  <span id="footerleft">
+	    &copy; 2001-2007 <a href="/team.html">The GIMP Team</a>
+	  </span>
+	  <span id="footerright">
+	    <a href="/webmasters.html">Contacting Us</a>
+	  </span>
+	</div>
+
 </div>
-<div>
-  <span id="footerleft">
-    &copy; 2001-2007 <a href="/team.html">The GIMP Team</a>
-  </span>
-  <span id="footerright">
-    <a href="/webmasters.html">Contacting Us</a>
-  </span>
-</div>
+
