--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -1,19 +1,13 @@
 <!-- $Id$ -->
 </head>
 <body id="wwwgimporg">
-<table id="titlebar" width="100%" bgcolor="#31527c" cellpadding="0" cellspacing="0" border="0" summary="GIMP">
-<tbody>
-<tr valign="top">
-<td align="left"><a href="http://www.gimp.org/"><img id="titlebarleft" src="/images/thegimp.png" alt="[GIMP]" border="0" /></a></td>
-<td width="99%"><br /></td>
-<td align="right"><a href="http://www.gimp.org/"><img id="titlebarright" src="/images/wilberright.jpeg" alt="" border="0" /></a></td>
-</tr>
-</tbody>
-</table>
-<table width="100%" cellpadding="0" cellspacing="0" border="0" summary="">
-<tbody>
-<tr valign="top" style="height: 100%;">
-<td id="menu" height="100%">
+<div id="header">
+  <div id="title"><span style="display: none;">GIMP</span></div>
+</div>
+
+<div id="maincontainer">
+
+<div id="menu">
   <p><a href="#main">Skip to page contents</a></p>
   <span>[</span>
   <a href="http://gimp.org/news.rdf">News</a><span> | </span>
@@ -42,5 +36,6 @@
   <span>]</span><br /><span>[</span>
   <a href="http://gimp.org/news.rdf"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
   <span>]</span>
-</td>
-<td id="main" width="100%">
+</div>
+
+<div id="main">
