--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -2,4 +2,7 @@
 <style type="text/css"><!--
 @import url("/style/wgo.css");
 //--></style>
+<!--[if lt IE 8]>
+<link rel="stylesheet" type="text/css" href="/style/ie-nastiness.css" />
+<![endif]-->
 <link rel="icon" href="/images/wilber16.png" type="image/png" />
