make the titlebar link to the frontpage
  * includes/wgo-page-init.htrw: make the titlebar link to the
    frontpage

svn path=/branches/v2.4/; revision=1461

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -2,7 +2,7 @@
 </head>
 <body id="wwwgimporg">
 <div id="header">
-  <div id="title"><span style="display: none;">GIMP</span></div>
+  <div id="title"><a href="/" style="display: block; width: 800px; height: 60px;"></a><span style="display: none;">GIMP</span></div>
 </div>
 
 <div id="maincontainer">
