remove inline CSS define generic table look
2007-03-19  Jakub Steiner <jimmac@gimp.org>

* tutorials/Basic_Perl/index.htrw:
* tutorials/Basic_Scheme/index.htrw:
* downloads/index.htrw:
* source/index.htrw: remove inline CSS
* style/wgo.css: define generic table look

svn path=/branches/v2.4/; revision=1467

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -94,7 +94,33 @@ h3 {
   clear: left;
 }
 
+table {
+  border-collapse: collapse;
+  margin: auto;
+  width: 86%;
+  border: 1px solid #ce5c00;
+}
 
+th {
+  background-color: #ce5c00;
+  text-align: left;
+  padding: .5em;
+}
+
+td {
+  text-align: left;
+  padding: .5em;
+}
+
+td.emphesize {
+  background-color:  #ae3c00;
+  font-weight: bold;
+}
+
+li table {
+  margin: 1em 0px;
+  width: 100%;
+}
 
 div.book-of-wilber { 
   font-size: large;
