splash screens, erm, splash
2007-03-19  Jakub Steiner <jimmac@gimp.org>

  * about/splash/splashsplash.png:
  * about/splash/index.htrw:
  * style/wgo.css: splash screens, erm, splash

svn path=/branches/v2.4/; revision=1469

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -432,7 +432,7 @@ form {
 
 .splash {
   margin: -20px 0px 0px -20px;
-  background-color: #555;
+  background-color: transparent;
   height: 180px;
   overflow: hidden;
 }
