clean up the splash page, add a 2.4 splash
2007-03-19  Jakub Steiner <jimmac@gimp.org>

  * admin/gimp-web-urls:
  * style/wgo.css:
  * about/splash/splash-images/gimp1_1_splash-2.4.png:
  * about/splash/splash-images/gimp1_1_splash-2.4-t.png:
    clean up the splash page, add a 2.4 splash

svn path=/branches/v2.4/; revision=1470

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -122,6 +122,10 @@ li table {
   width: 100%;
 }
 
+table.gimpsplash td {
+  vertical-align: bottom;
+}
+
 dd {
   margin: .5em .5em .5em 5em;
 }
@@ -430,7 +434,7 @@ form {
    text-align: right;
 }
 
-.splash {
+div.splash {
   margin: -20px 0px 0px -20px;
   background-color: transparent;
   height: 180px;
