includes/wgo-page-init.xhtml docs/index.htrw User FAQ contributed by David
2007-03-19  Karine Delvare  <edhel@gimp.org>

	* includes/wgo-page-init.xhtml
	* docs/index.htrw
	* docs/userfaq.htrw: User FAQ contributed by David Marrs.



svn path=/branches/v2.4/; revision=1472

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -22,6 +22,7 @@
   <a href="/macintosh/" class="sub">MacOSX</a><span> | </span>
   <a href="/source/" class="sub">Source</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span>
+  <a href="/docs/userfaq.html" class="sub">FAQ</a><span> | </span>
   <a href="/books/" class="sub">Books</a><span> | </span>
   <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
   <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
