about/splash/stable.png about/splash/unstable.png make the splash list a
2007-03-20  Jakub Steiner <jimmac@gimp.org>

  * about/splash/stable.png
  * about/splash/unstable.png
  * style/wgo.css: make the splash list a bit fancier

svn path=/branches/v2.4/; revision=1476

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -232,6 +232,17 @@ li {
   margin-right: 40px;
 }
 
+ul.splashes li {
+  /* list-style-image: url('/about/splash/unstable.png'); */
+  list-style-type: circle;
+}
+
+ul.splashes li:first-child {
+  list-style-image: url('/about/splash/stable.png');
+  list-style-type: square;
+  padding-bottom: .8em;
+}
+
 .list li {
   padding-bottom: 1.2em;
 }
