add a placeholder for GIMP\'s "ability showroom"
2007-03-21  Jakub Steiner <jimmac@gimp.org>

  * features: add a placeholder for GIMP\'s "ability showroom"
  * includes/wgo-page-init.xhtml
  * includes/wgo-page-fini.xhtml: new menu structure
  * style/wgo.css: verbose menu styling, interlinks
  * style/ie-nastiness.css: make things look almost exactly as with
    web browsers :)

svn path=/branches/v2.4/; revision=1478

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -1,19 +1,57 @@
 <!-- $Id$ -->
 </div><!-- main -->
 </div><!-- maincontainer -->
+
+<div id="bottommenu">
+  <div class="bottomlinks">
+	<ul>
+	  <li class="mainlink"><a href="/features/">Features</a></li>
+	  <li><a href="/release-notes/">Release Notes</a></li>
+	  <li><a href="/about/everywhere.html">GIMP Everywhere</a></li>
+	  <li class="mainlink"><a href="/screenshots/">Screenshots</a></li>
+	</ul>
+  </div>
+  <div class="bottomlinks">
+	<ul>
+	  <li class="mainlink"><a href="/downloads/">Downloads</a></li>
+	  <li><a href="/unix/">Linux/Unix</a></li>
+	  <li><a href="/windows/">Windows</a></li>
+	  <li><a href="/macintosh/">MacOSX</a></li>
+	  <li><a href="/source/">Source</a></li>
+	</ul>
+  </div>
+  <div class="bottomlinks">
+	<ul>
+	  <li class="mainlink"><a href="/docs/">Documentation</a></li>
+	  <li><a href="/docs/userfaq.html">FAQ</a></li>
+	  <li><a href="/books/">Books</a></li>
+	  <li><a href="/tutorials/">Tutorials</a></li>
+	  <li><a href="mail_lists.html">Mailing Lists</a></li>
+	  <li><a href="http://wiki.gimp.org">Wiki</a></li>
+	</ul>
+  </div>
+  <div class="bottomlinks">
+	<ul>
+	  <li class="mainlink"><a href="/about/">History</a></li>
+	  <li><a href="/about/splash/">Splash Archive</a></li>
+	  <li><a href="/links/">Links</a></li>
+	</ul>
+  </div>
+  <div class="bottomlinks">
+	<ul>
+	  <li class="mainlink"><a href="/develop/">Get Involved</a></li>
+	  <li><a href="/donating/">Donating</a></li>
+	  <li><a href="/bugs/">Bug Reports</a></li>
+	  <li><a href="/about/merchandise.html">GIMP Goods</a></li>
+	</ul>
+  </div>
+  <br style="clear: both; display: block; height: 200px;" />
+</div>
+
 <div id="linkbar">
-  <a href="http://registry.gimp.org">Plug-In Registry</a> |
-  <a href="http://developer.gimp.org">GIMP Development</a> |
-  <a href="http://gug.sunsite.dk">GIMP User Group</a>
-
-	<div>
-	  <span id="footerleft">
-	    &copy; 2001-2007 <a href="/team.html">The GIMP Team</a>
-	  </span>
-	  <span id="footerright">
-	    <a href="/webmasters.html">Contacting Us</a>
-	  </span>
-	</div>
-
+  <div>
+    <p>&copy; 2001-2007 <a href="/team.html">The GIMP Team</a> | 
+    <a href="/webmasters.html">Contacting Us</a></p>
+  </div>
 </div>
 
