--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -12,27 +12,14 @@
   <span>[</span>
   <a href="/">News</a><span> | </span>
   <a href="/screenshots/">Screenshots</a><span> | </span>
-  <a href="/release-notes/">Features</a><span> | </span>
-  <a href="/about/everywhere.html" class="sub">GIMP everywhere</a><span> | </span>
-  <a href="/about/">History</a><span> | </span>
-  <a href="/about/splash/" class="sub">Splash archive</a><span> | </span>
+  <a href="/features/">Features</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
-  <a href="/unix/" class="sub">Linux/Unix</a><span> | </span>
-  <a href="/windows/" class="sub">Windows</a><span> | </span>
-  <a href="/macintosh/" class="sub">MacOSX</a><span> | </span>
-  <a href="/source/" class="sub">Source</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span>
-  <a href="/docs/userfaq.html" class="sub">FAQ</a><span> | </span>
-  <a href="/books/" class="sub">Books</a><span> | </span>
-  <a href="/tutorials/" class="sub">Tutorials</a><span> | </span>
-  <a href="/mail_lists.html" class="sub">Mailing Lists</a><span> | </span>
-  <a href="http://wiki.gimp.org" class="sub">Wiki</a><span> | </span>
   <a href="/develop/">Get Involved</a><span> | </span>
-  <a href="/donating/" class="sub">Donating</a><span> | </span>
-  <a href="/bugs/" class="sub">Bug Reports</a><span> | </span>
-  <a href="/about/merchandise.html" class="sub">GIMP Goods</a><span> | </span>
-  <a href="/links/">Links</a>
   <span>]</span><br /><span>[</span>
+  <a href="http://registry.gimp.org">Plug-in Registry</a><span> | </span>
+  <a href="http://developer.gimp.org">GIMP Development</a><span> | </span>
+  <a href="http://gug.sunsite.dk">GIMP User Group</a><span> | </span>
   <span>]</span><br /><span>[</span>
   <span>]</span><br /><span>[</span>
 
