--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -16,6 +16,7 @@
   <a href="/downloads/">Downloads</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span>
   <a href="/develop/">Get Involved</a><span> | </span>
+  <a href="/donating/">Donating</a><span> | </span>
   <span>]</span><br /><span>[</span>
   <a href="http://registry.gimp.org">Plug-in Registry</a><span> | </span>
   <a href="http://developer.gimp.org">GIMP Development</a><span> | </span>
