tweak existing sponsor graphics add SVGs for easier updating in future
2007-03-22  Jakub Steiner <jimmac@ximian.com>

  * donating/*.png: tweak existing sponsor graphics
  * donating/svg: add SVGs for easier updating in
    future
  * includes/wgo-page-init.xhtml
  * includes/wgo-page-fini.xhtml: make a donate button

svn path=/branches/v2.4/; revision=1488

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -16,16 +16,14 @@
   <a href="/downloads/">Downloads</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span>
   <a href="/develop/">Get Involved</a><span> | </span>
-  <a href="/donating/">Donating</a><span> | </span>
   <span>]</span><br /><span>[</span>
   <a href="http://registry.gimp.org">Plug-in Registry</a><span> | </span>
   <a href="http://developer.gimp.org">GIMP Development</a><span> | </span>
   <a href="http://gug.sunsite.dk">GIMP User Group</a><span> | </span>
   <span>]</span><br /><span>[</span>
-  <span>]</span><br /><span>[</span>
 
   <span>]</span><br /><span>[</span>
-  <a href="http://gimp.org/news.rdf"><img src="/images/rss-gimp-news.png" alt="GIMP News Feed" width="80" height="15" border="0" /></a>
+  <a href="/donating/"><img src="/donating/donate.png" alt="Donate to GIMP" width="110" height="23" border="0" /></a>
   <span>]</span>
 </div>
 
