--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -50,7 +50,8 @@
 
 <div id="linkbar">
   <div>
-    <p>&copy; 2001-2007 <a href="/team.html">The GIMP Team</a> | 
+    <p>&copy; 2001-2007 <a href="/team.html">The GIMP Team</a> <span style="padding: 0px 10px;">&nbsp;</span>
+    <a href="http://gimp.org/news.rdf">GIMP News Feed</a> | 
     <a href="/webmasters.html">Contacting Us</a></p>
   </div>
 </div>
