make h2 and h3 differ more.
2007-03-29  Jakub Steiner <jimmac@ximian.com>

  * style/wgo.css: make h2 and h3 differ more.

svn path=/branches/v2.4/; revision=1496

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -2,7 +2,7 @@
 </head>
 <body id="wwwgimporg">
 <div id="header">
-  <div id="title"><a href="/" style="display: block; width: 800px; height: 60px;"></a><span style="display: none;">GIMP</span></div>
+  <div id="title"><a href="/" style="display: block; width: 800px; height: 60px; text-decoration: none; color: white;"><span style="display: block; padding: 15px;">GNU Image Manipulation Program</span></a></div>
 </div>
 
 <div id="maincontainer">
@@ -15,15 +15,15 @@
   <a href="/features/">Features</a><span> | </span>
   <a href="/downloads/">Downloads</a><span> | </span>
   <a href="/docs/">Documentation</a><span> | </span>
-  <a href="/develop/">Get Involved</a><span> | </span>
+  <a href="/develop/">Get Involved</a>
   <span>]</span><br /><span>[</span>
   <a href="http://registry.gimp.org">Plug-in Registry</a><span> | </span>
   <a href="http://developer.gimp.org">GIMP Development</a><span> | </span>
-  <a href="http://gug.sunsite.dk">GIMP User Group</a><span> | </span>
-  <span>]</span><br /><span>[</span>
+  <a href="http://gug.sunsite.dk">GIMP User Group</a>
+  <span>]</span><br />
 
-  <span>]</span><br /><span>[</span>
-  <a href="/donating/"><img src="/donating/donate.png" alt="Donate to GIMP" width="110" height="23" border="0" /></a>
+  <span>[</span>
+  <a href="/donating/"><img src="/images/donate-sm.png" alt="Donate to GIMP" width="100" height="20" border="0" /></a>
   <span>]</span>
 </div>
 
