--- a/style/wgo.css
+++ b/style/wgo.css
@@ -85,20 +85,31 @@ h2 {
   color: #999;
   font-weight: bold;
   font-size: 120%;
-  margin-top: 3em;
+  margin-top: 1.5em;
   margin-bottom: 1em;
   clear: left;
 }
+
+p+h2 {
+  /* all headings that follow a paragraph should be indented more */
+  margin-top: 3em;
+}
+
 
 /* Another subtitle using another font-size then the subtitle. */
 h3 {
   color: #999;
   font-weight: normal;
   font-size: 110%;
-	letter-spacing: .1em;
-  margin-top: 3em;
+  letter-spacing: .1em;
+  margin-top: 1.5em;
   margin-bottom: 1em;
   clear: left;
+}
+
+p+h3 {
+  /* all headings that follow a paragraph should be indented more */
+  margin-top: 4em;
 }
 
 table {
