--- a/style/wgo.css
+++ b/style/wgo.css
@@ -65,7 +65,7 @@ img.right, object.right {
 img.figure {
   display: block;
   margin: 1em auto;
-  width: 500px;
+  max-width: 500px;
 }
 
 /* Main header. */
@@ -171,9 +171,7 @@ div.news {
 }
 
 p {
-  margin: 1.33em 0px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin: 1.33em 3em;
 }
 
 p.news {
@@ -357,15 +355,15 @@ form {
  * more information about the values below. */
 
 #maincontainer {
-   max-width: 800px;
-   min-height: 600px;
+   max-width: 60em;
+   min-height: 80em;
    margin: 0px auto;
    /* border: 1px solid green; */
    background-color: #2e3436;
 }
 
 #menu {
-  width: 140px;
+  width: 12em;
   float: right;
   /* border: 1px solid red; */
   padding: 20px;
@@ -381,7 +379,7 @@ form {
 #menu a {
   display: block;
   text-decoration: none;
-  width: 140px;
+  width: 12em;
   margin: 2px;
   padding: 2px 4px 2px 8px;
 }
@@ -430,7 +428,7 @@ form {
 }
 
 #main {
-  width: 600px;
+  max-width: 60em;
   margin: 0px;
   padding: 20px;
   /* border: 1px solid blue; */
@@ -438,35 +436,31 @@ form {
 
 
 #linkbar, #navbar {
-  width: 750px;
+  max-width: 60em;
   margin: 0px auto 20px auto;
-  padding: 10px;
+  padding: 0px;
   clear: both;
   background: #111;
   color: #aaa;
   border-top: 1 px solid #666;
-  padding: 5px 25px 5px 25px;
   font-weight: bold;
-  font-size: 80%;
   text-align: center;
-  min-height: 70px;
   -moz-border-radius-bottomright: 7px;
   -moz-border-radius-bottomleft: 7px;
+	min-height: 8em;
 }
 
 #linkbar div {
-  margin: 1em;
+  padding: 1em;
 }
 
 div#bottommenu {
-  width: 750px;
+  max-width: 60em;
   margin: 0px auto;
   padding: 0px;
   clear: both;
   background: #151515;
   color: #aaa;
-  padding: 5px 25px 5px 25px;
-  min-height: 10em;
   white-space: nowrap;
 }
 
@@ -486,12 +480,12 @@ div.bottomlinks ul {
 
 div.bottomlinks a {
   text-decoration: none;
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 div.bottomlinks a:hover {
   text-decoration: none;
-  padding-left: 6px;
+  padding-left: 11px;
   border-left: 4px solid #f57900;
 }
 
@@ -515,7 +509,7 @@ div.bottomlinks li {
 }
 
 #title {
-   width: 800px;
+   max-width: 60em;
    padding: 0px;
    margin: 0px auto;
    font-size: 10pt;
@@ -532,14 +526,13 @@ div.splash {
 }
 
 .intropara {
-  width: 546px;
   margin: 0px 0px 2em -20px;
   background-color: #444;
   padding: 8px 16px 16px 58px;
   line-height: 1.5em;
   overflow: hidden;
   font-style: italic;
-  font-size: small;
+  font-size: 90%;
 }
 
 #downloadgimp {
