index.htrw make a valid xhtml again
2007-05-14  Jakub Steiner <jimmac@ximian.com>

* index.htrw
* includes/wgo-page-fini.xhtml: make a valid xhtml again

svn path=/branches/v2.4/; revision=1509

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -52,7 +52,8 @@
   <div>
     <div>&copy; 2001-2007 <a href="/team.html">The GIMP Team</a> <span style="padding: 0px 10px;">&nbsp;</span>
     <a href="http://gimp.org/news.rdf">GIMP News Feed</a> | 
-    <a href="/webmasters.html">Contacting Us</a></p>
+    <a href="/webmasters.html">Contacting Us</a>
+		</div>
   </div>
 </div>
 
