includes/jquery-latest.js includes/jqbrowser.js
2007-07-04  Jakub Steiner <jimmac@ximian.com>

* includes/jquery-latest.js
* includes/jqbrowser.js
* includes/jquery.corner.pack.js
* includes/excanvas.pack.js
* includes/jquery-old.js
* includes/wgo.js
* includes/wgo-scripts.xhtml
* includes/wgo-look-feel.xhtml
* style/wgo.css
* style/ie-nastiness.css
* downloads/index.htrw: infrastructure for doing 'smart'
downloads, easier to maintain cross-browser workarounds.

svn path=/branches/v2.4/; revision=1519

--- a/includes/wgo-look-feel.xhtml
+++ b/includes/wgo-look-feel.xhtml
@@ -1,4 +1,5 @@
 <!-- $Id$ -->
 <!--#include virtual="/includes/wgo-layout.xhtml" -->
 <!--#include virtual="/includes/wgo-styles.xhtml" -->
+<!--#include virtual="/includes/wgo-scripts.xhtml" -->
 <!--#include virtual="/includes/wgo-navigation.xhtml" -->
