images/previous_image.png images/spacer.png images/next_image.png
2007-07-09  Jakub Steiner <jimmac@ximian.com>

* images/previous_image.png
* images/spacer.png
* images/next_image.png
* style/wgo.css
* style/interface.css
* screenshots/index.htrw: more screenshot infrastucture work. 

* images/fade.png
* images/frontsplash.jpg
* includes/imagebox.xhtml
* includes/iutil.js
* includes/imagebox.js: in a very typical fashion I forgot to add
some files. Nobody seemed to care :)

svn path=/branches/v2.4/; revision=1522

--- a/style/interface.css
+++ b/style/interface.css
@@ -4,13 +4,13 @@
 }
 #ImageBoxCaption
 {
-	background-color: #F4F4EC;
+	background-color: #fff;
 }
 #ImageBoxContainer
 {
 	width: 250px;
 	height: 250px;
-	background-color: #F4F4EC;
+	background-color: #fff;
 }
 #ImageBoxCaptionText
 {
@@ -35,13 +35,13 @@
 }
 #ImageBoxNextImage:hover
 {
-	background-image: url('/images/next_image.jpg');
+	background-image: url('/images/next_image.png');
 	background-repeat:	no-repeat;
 	background-position: right top;
 }
 #ImageBoxPrevImage:hover
 {
-	background-image: url('/images/previous_image.jpg');
+	background-image: url('/images/previous_image.png');
 	background-repeat:	no-repeat;
 	background-position: left bottom;
 };
