remove redundant max-width style/wgo.css downloads/downloadsplash.png make
2007-07-09  Jakub Steiner <jimmac@ximian.com>

* includes/wgo-page-init.xhtml: remove redundant max-width
* style/wgo.css
* downloads/downloadsplash.png
* downloads/index.htrw: make download splash work with flexible
width


svn path=/branches/v2.4/; revision=1524

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -2,7 +2,7 @@
 </head>
 <body id="wwwgimporg">
 <div id="header">
-  <div id="title"><a href="/" style="display: block; max-width: 800px; height: 60px; text-decoration: none; color: white;"><span style="display: block; padding: 15px;">GNU Image Manipulation Program</span></a></div>
+  <div id="title"><a href="/" style="display: block; height: 60px; text-decoration: none; color: white;"><span style="display: block; padding: 15px;">GNU Image Manipulation Program</span></a></div>
 </div>
 
 <div id="maincontainer">
